Fix removing cards from DOM after animate out; fix preventing elastic scrolling on iOS.

--- a/tidbits/trunk/web/css/tidbits.css
+++ b/tidbits/trunk/web/css/tidbits.css
@@ -12,7 +12,6 @@ body {
 body.app {
 	margin: 0;
 	padding: 0;
-	overflow: hidden;
 }
 
 p {
@@ -342,6 +341,12 @@ div.alert {
 }
 
 @media (min-width: 481px) {
+	body {
+		overflow: hidden;
+		width: 100%;
+		height: 100%;
+	}
+
 	.form-horizontal .control-label {
 		width: 80px;
 	}
